Initial revisions
Extract interface, remove out of scope methods, move build request to client, refactors

Signed-off-by: owenhalpert <ohalpert@gmail.com>