@@ -7,8 +7,6 @@ package org.opensearch.knn.index.remote;
 
 import org.apache.hc.client5.http.impl.DefaultHttpRequestRetryStrategy;
 import org.apache.hc.core5.http.ConnectionClosedException;
-import org.apache.hc.core5.http.HttpResponse;
-import org.apache.hc.core5.http.protocol.HttpContext;
 import org.apache.hc.core5.util.TimeValue;
 
 import javax.net.ssl.SSLException;
@@ -16,7 +14,6 @@ import java.io.InterruptedIOException;
 import java.net.ConnectException;
 import java.net.NoRouteToHostException;
 import java.net.UnknownHostException;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -26,14 +23,13 @@ import java.util.List;
  * @see org.apache.hc.client5.http.impl.DefaultHttpRequestRetryStrategy
  */
 public class RemoteIndexClientRetryStrategy extends DefaultHttpRequestRetryStrategy {
-    private static final List<Integer> retryableCodes = Arrays.asList(408, 429, 500, 502, 503, 504, 509);
-    private static final List<Integer> backoffCodes = Arrays.asList(429, 503);
+    private static final List<Integer> retryableCodes = List.of(408, 429, 500, 502, 503, 504, 509);
 
     public RemoteIndexClientRetryStrategy() {
         super(
-            RemoteIndexClient.MAX_RETRIES,
-            TimeValue.ofMilliseconds(RemoteIndexClient.BASE_DELAY_MS),
-            Arrays.asList(
+            RemoteIndexHTTPClient.MAX_RETRIES,
+            TimeValue.ofMilliseconds(RemoteIndexHTTPClient.BASE_DELAY_MS),
+            List.of(
                 InterruptedIOException.class,
                 UnknownHostException.class,
                 ConnectException.class,
@@ -43,20 +39,5 @@ public class RemoteIndexClientRetryStrategy extends DefaultHttpRequestRetryStrat
             ),
             retryableCodes
         );
-    }
-
-    /**
-     * Override retry interval setting to implement backoff strategy for throttling codes.
-     * These codes may be returned with their own 'Retry-After' header which will take precedent over the below.
-     * This is only relevant for future implementations where we may increase the retry count from 1 max retry.
-     */
-    @Override
-    public TimeValue getRetryInterval(HttpResponse response, int execCount, HttpContext context) {
-        if (backoffCodes.contains(response.getCode())) {
-            long delay = RemoteIndexClient.BASE_DELAY_MS;
-            long backoffDelay = delay * (long) Math.pow(2, execCount - 1);
-            return TimeValue.ofMilliseconds(Math.min(backoffDelay, TimeValue.ofMinutes(1).toMilliseconds()));
-        }
-        return super.getRetryInterval(response, execCount, context);
     }
 }
